--- a/karakterler.html
+++ b/karakterler.html
@@ -161,10 +161,10 @@
             <div class="portrait-info"><h2 class="char-name">Murphy</h2><span class="book-ref">Kayıp Duyular Atlası</span></div>
           </div>
         </a>
-        <a href="https://berkayalay53.github.io/gecmistekisessizlik.github.io/" class="card-link" target="_blank">
+        <a href="https://berkayalay53.github.io/beyninsessizfirtinalari.github.io/" class="card-link" target="_blank">
           <div class="portrait-card">
             <img src="./otopotre3.jpg" alt="Harris" class="portrait-img">
-            <div class="portrait-info"><h2 class="char-name">Harris</h2><span class="book-ref">Geçmişteki Sessizlik</span></div>
+            <div class="portrait-info"><h2 class="char-name">Harris</h2><span class="book-ref">Beynin Sessiz Fırtınaları</span></div>
           </div>
         </a>
         <a href="https://berkayalay53.github.io/beyninsessizfirtinalari.github.io/" class="card-link" target="_blank">
