--- a/index.html
+++ b/index.html
@@ -220,7 +220,28 @@
         </div>
       </div>
     </section>
+<section class="fate-section">
+      <div class="wrap">
+        <div class="fate-box">
+          <h2 class="fate-header">Kaderin Bir Cümlesi</h2>
+          <p class="fate-sub">Hangi satırın sana ait olduğunu henüz bilmiyorsun.</p>
+          <button id="fate-btn" class="btn-fate">Bana Bir His Ver</button>
 
+          <div id="fate-result" class="fate-result">
+            <p id="quote-text">...</p>
+            <span id="book-name"></span>
+        
+            <div class="share-actions">
+              <button id="share-copy" class="share-btn" aria-label="Kopyala">
+                <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
+                <span style="font-size: 12px; margin-left:5px;">Kopyala</span>
+              </button>
+              <span id="copy-msg" class="copy-feedback">Kopyalandı</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 <section class="section section--footer">
   <div class="wrap footer">
     
@@ -578,6 +599,76 @@
       "%c Kodların arasında hikaye aranmaz.\nHikaye, satır aralarındaki boşluktadır.",
       "color: #bcb6aa; font-family: sans-serif; font-size: 14px; font-style: italic;"
     );
+    // === KADERİN CÜMLESİ SİSTEMİ ===
+  const fateBtn = document.getElementById('fate-btn');
+  const fateResult = document.getElementById('fate-result');
+  const quoteText = document.getElementById('quote-text');
+  const bookNameRef = document.getElementById('book-name');
+  const shareCopy = document.getElementById('share-copy');
+  const copyMsg = document.getElementById('copy-msg');
+
+  // Külliyat Sözlüğü
+  const quotes = [
+      { text: "Sana hiç dokunmadan, seni hiç durdurmadan... sadece uzaktan bir şarkı gibi sevdim seni.", book: "Turuncu Saçlı Kız" },
+      { text: "Eğer bir gün yine yalnız yazarsam... seni değil, seni bekleyen hâlimi özlerim.", book: "Geçmişteki Sessizlik" },
+      { text: "Bazı insanlar hayatımıza dokunmaz... sadece gözlerimizin içine bakıp kim olduğumuzu hatırlatırlar.", book: "Geçmişteki Sessizlik" },
+      { text: "Geriye dönsem de seni değil, sadece kendi yokluğumu bulacağımı biliyorum.", book: "Mazide Kalan" },
+      { text: "Sarsılmadan duranlar... gürültüsüz çökenlerdir.", book: "Beynin Sessiz Fırtınaları" },
+      { text: "İnsan bazı şeyleri söylemese de gözleri konuşur... Göz göze gelmek cesarettir; gözünü kaçırmamaksa, vedadır.", book: "Beynin Sessiz Fırtınaları" },
+      { text: "Bazı insanlar konuşmaz. Ama gözleriyle bir ömürlük cümle kurarlar.", book: "Beynin Sessiz Fırtınaları" },
+      { text: "Bazı özlemler... geçmişten değil, hiç yaşanmamış ihtimallerden doğar.", book: "Beynin Sessiz Fırtınaları" },
+      { text: "İnsan bazen görünmek istemez. Ama fark edilmek ister... Ben, fark edilmekle görünmemek arasında asılı kalmış bir kelimeydim.", book: "Beynin Sessiz Fırtınaları" },
+      { text: "İnsan bazen geçmişini anlatırken... olanı değil, olmasını istediğini hatırlar.", book: "Beynin Sessiz Fırtınaları" },
+      { text: "İnsan, hayal ettiğini severmiş; gerçeği ise sadece tolere edermiş.", book: "Kayıp Duyular Atlası" },
+      { text: "Konuşmazsak kalır sanıyoruz. Oysa en çok susarak kaybediyoruz her şeyi.", book: "Turuncu Saçlı Kız" },
+      { text: "Bazı insanlar birini özlemiyor — bir boşluğu seviyor.", book: "Kayıp Duyular Atlası" },
+      { text: "Fark etmemenin içinde öylesine bir adalet vardı ki... buna bile razı oldum.", book: "Turuncu Saçlı Kız" },
+      { text: "Kitap biter. Ama ses… devam eder.", book: "Kaybolan Sesin Defteri" },
+      { text: "Bu defter sessiz değil, sağır edici bir gürültüyle dolu.", book: "Kaybolan Sesin Defteri" },
+      { text: "Biliyor musun, ben seni hiç ‘sahiplenmedim’. Çünkü sahip olduklarımı hep kaybettim.", book: "Geçmişteki Sessizlik" },
+      { text: "Bazı insanlar, hayata bir cümle gibi girer. Sonra virgül olur. Sonra üç nokta... Ve sonra, sessizlik.", book: "Turuncu Saçlı Kız" },
+      { text: "Sanki konuşmaktan çok… anlatılmayan şeyleri dinliyorduk.", book: "Bir Defterin İçinde Kalanlar" }
+  ];
+
+  // Havuz Sistemi (Tekrarı Önler)
+  let availableIndices = [];
+
+  if(fateBtn) {
+    fateBtn.addEventListener('click', () => {
+      // Butonu kısa süre kilitle
+      fateBtn.textContent = "Hissediliyor...";
+      fateBtn.style.pointerEvents = "none";
+      fateResult.classList.remove('show');
+
+      // Havuz boşsa doldur
+      if (availableIndices.length === 0) {
+        availableIndices = quotes.map((_, i) => i);
+      }
+
+      // Rastgele seçim ve havuzdan silme
+      const randomIndexInPool = Math.floor(Math.random() * availableIndices.length);
+      const selectedIndex = availableIndices.splice(randomIndexInPool, 1)[0];
+      const selectedQuote = quotes[selectedIndex];
+
+      setTimeout(() => {
+        // İçeriği güncelle
+        quoteText.textContent = `“${selectedQuote.text}”`;
+        bookNameRef.textContent = `— ${selectedQuote.book}`;
+
+        // Kopyalama Özelliği
+        shareCopy.onclick = () => {
+          const fullText = `"${selectedQuote.text}" — ${selectedQuote.book}\n\nBerkay Alay`;
+          navigator.clipboard.writeText(fullText);
+          copyMsg.classList.add('visible');
+          setTimeout(() => copyMsg.classList.remove('visible'), 2000);
+        };
+
+        // Göster
+        fateResult.classList.add('show');
+        fateBtn.textContent = "Başka Bir His Ver";
+        fateBtn.style.pointerEvents = "auto";
+      }, 600);
+    });
   </script>
 <script>
   // === SAYFA YÜKLENME YÖNETİCİSİ ===
