--- a/dehliz.html
+++ b/dehliz.html
@@ -10,7 +10,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,300;0,600;1,400&family=Inter:wght@300;400&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="./style_sergi.css">
+  <link rel="stylesheet" href="./style_dehliz.css">
 </head>
 <body>
 
