--- a/dehliz.html
+++ b/dehliz.html
@@ -101,7 +101,7 @@
     </div>
 
     <div class="frame">
-      <a href="https://www.instagram.com/reel/DUbhql3jqsn/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" class="art-link">
+     <a href="https://www.instagram.com/reel/DTixitPjkUL/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" class="art-link">
         <img src="./dehliz12.jpg" alt="Dehliz Atlası 12">
         <div class="caption">GÖRMEK İÇİN DOKUN</div>
       </a>
