--- a/dehliz.html
+++ b/dehliz.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dehliz Atlası — Görsel Hafıza</title>
+  <title>Dehliz Atlası — Sessiz Tanıklıklar</title>
   
   <meta name="theme-color" content="#0f1113">
   <link rel="icon" href="./profile.jpg" type="image/jpeg">
