--- a/index.html
+++ b/index.html
@@ -221,19 +221,26 @@
       </div>
     </section>
 
-<section class="section section--footer">
-  <div class="wrap footer">
-    
-    <div class="nav-row">
-      <a href="./kutuphane.html" class="btn-ghost">Tüm Külliyat</a>
-      <a href="./karakterler.html" class="btn-ghost">Sessizliğin Yüzleri</a>
-    </div>
+<footer class="section section--footer">
+      <div class="wrap footer">
+        
+        <div class="nav-row">
+          <a href="./kutuphane.html" class="btn-ghost">Tüm Külliyat</a>
+          <a href="./karakterler.html" class="btn-ghost">Sessizliğin Yüzleri</a>
+          <a href="./seyir.html" class="btn-ghost">Seyir Defteri</a>
+        </div>
 
-    <p class="sig__meta">
-      © 2026 Berkay Alay — <span style="opacity: 0.5;">Kelimelerin Sığınağı.</span>
-    </p>
-  </div>
-</section>
+        <div class="exhibit-nav">
+          <p class="exhibit-label">Sessiz Tanıklıklar</p>
+          <div class="nav-row exhibit-buttons">
+            <a href="./sergi.html" class="btn-ghost">İzler Atlası</a>
+            <a href="./dehliz.html" class="btn-ghost">Dehliz Atlası</a>
+          </div>
+        </div>
+
+        <p class="sig__meta">© 2026 Berkay Alay — <span style="opacity: 0.5;">Kelimelerin Sığınağı.</span></p>
+      </div>
+    </footer>
 
   </main>
 <div id="secret-modal" class="secret-modal">
