--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
         url: "https://berkayalay53.github.io/mazidekalan.github.io/"
       },
       { 
-        text: "Sarsılmadan duranlar... gürültüsüz çökenlerdir.", 
-        book: "Beynin Sessiz Fırtınaları",
-        url: "https://berkayalay53.github.io/beyninsessizfirtinalari.github.io/"
+        text: "Bazı insanlar, konuşmadan anlatanlardandır... Ve biz şimdi, onları sustukları yerden duyabilenlerdeniz.", 
+        book: "Bir Defterin İçinde Kalanlar",
+        url: "https://berkayalay53.github.io/birdefterinicindekalanlar.github.io/"
       },
       { 
         text: "İnsan bazı şeyleri söylemese de gözleri konuşur... Göz göze gelmek cesarettir; gözünü kaçırmamaksa, vedadır.", 
@@ -426,9 +426,9 @@
         url: "https://berkayalay53.github.io/turuncusaclikiz.github.io/"
       },
       { 
-        text: "Bazı insanlar birini özlemiyor — bir boşluğu seviyor.", 
-        book: "Kayıp Duyular Atlası",
-        url: "https://berkayalay53.github.io/kayipduyularatlasi.github.io/"
+        text: "Ama bu yüz… sanki bilmediğim bir geçmişin, henüz yaşanmamış bir geleceğin resmiydi.", 
+        book: "Kaybolan Sesin Defteri",
+        url: "https://berkayalay53.github.io/kaybolansesindefteri.github.io/"
       },
       { 
         text: "Fark etmemenin içinde öylesine bir adalet vardı ki... buna bile razı oldum.", 
