--- a/index.html
+++ b/index.html
@@ -222,24 +222,24 @@
     </section>
 
 <footer class="section section--footer">
-      <div class="wrap footer">
-        
-        <div class="nav-row">
-          <a href="./kutuphane.html" class="btn-ghost">Tüm Külliyat</a>
-          <a href="./karakterler.html" class="btn-ghost">Sessizliğin Yüzleri</a>
-        </div>
+  <div class="wrap footer">
+    
+    <div class="nav-row main-nav">
+      <a href="./kutuphane.html" class="btn-ghost">Tüm Külliyat</a>
+      <a href="./karakterler.html" class="btn-ghost">Sessizliğin Yüzleri</a>
+    </div>
 
-        <div class="exhibit-nav">
-          <p class="exhibit-label">Sessiz Tanıklıklar</p>
-          <div class="nav-row exhibit-buttons">
-            <a href="./sergi.html" class="btn-ghost">İzler Atlası</a>
-            <a href="./dehliz.html" class="btn-ghost">Dehliz Atlası</a>
-          </div>
-        </div>
-
-        <p class="sig__meta">© 2026 Berkay Alay — <span style="opacity: 0.5;">Kelimelerin Sığınağı.</span></p>
+    <div class="exhibit-wrapper">
+      <div class="divider"><span>Sessiz Tanıklıklar</span></div>
+      <div class="nav-row atlas-nav">
+        <a href="./sergi.html" class="btn-ghost atlas-btn">İzler Atlası</a>
+        <a href="./dehliz.html" class="btn-ghost atlas-btn">Dehliz Atlası</a>
       </div>
-    </footer>
+    </div>
+
+    <p class="sig__meta">© 2026 Berkay Alay — <span style="opacity: 0.5;">Kelimelerin Sığınağı.</span></p>
+  </div>
+</footer>
 
   </main>
 <div id="secret-modal" class="secret-modal">
