--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           class="authorPhoto"
         >
 
-        <h1>Berkay Alay</h1>
+       <h1><span class="name-trace" data-trace="L'art est long, la vie est courte">Berkay Alay</span></h1>
 
      <div class="social-row">
 
