--- a/karakterler.html
+++ b/karakterler.html
@@ -12,24 +12,27 @@
   <link rel="stylesheet" href="./style.css">
 
   <style>
-   /* === ARKA PLAN VE BEYAZLAMA ÇÖZÜMÜ === */
-    html, body {
-      background-color: #0f1113 !important; 
-      background-image: none; 
+  /* === 1. BEYAZLAMA SORUNU ÇÖZÜMÜ === */
+    html {
+      background-color: #0f1113 !important; /* Ana zemin rengi burada kalsın */
+    }
+
+    body {
+      background-color: transparent !important; /* Body şeffaf olsun ki resim görünsün */
       overflow-x: hidden; 
       height: 100%;
     }
-/* === 2. ARKA PLAN RESMİ === */
+
+    /* === 2. ARKA PLAN RESMİ === */
     .bg-layer {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      z-index: -5;
-      background-image: url('./arkaplan.jpg');
+      z-index: -1; /* Arkaya çok gömülmesin, hemen body'nin altında dursun */
+      background-image: url('./arkaplan.jpg'); 
       background-size: cover;
       background-position: center;
-      /* Işık artırıldı, bulanıklık hafifçe azaltıldı */
-      filter: blur(4px) brightness(0.55) grayscale(30%); 
+      filter: blur(5px) brightness(0.35) grayscale(40%);
       transform: scale(1.05);
     }
 
@@ -50,8 +53,8 @@
       background: radial-gradient(
         circle at 50% 30%,
         transparent 15%,
-        rgba(0, 0, 0, 0.3) 45%,
-        rgba(10, 12, 14, 0.75) 95% /* Perde inceltildi, arkası artık görünür */
+        rgba(0, 0, 0, 0.4) 45%,
+        rgba(10, 12, 14, 0.98) 95%
       );
       mix-blend-mode: multiply;
     }
