--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         url: "https://berkayalay53.github.io/gecmistekisessizlik.github.io/"
       },
       { 
-        text: "Bazı insanlar hayatımıza dokunmaz... sadece gözlerimizin içine bakıp kim olduğumuzu hatırlatırlar.", 
+        text: " Bazı insanlar hayatımıza dokunmaz... sadece gözlerimizin içine bakıp kim olduğumuzu hatırlatırlar.", 
         book: "Geçmişteki Sessizlik",
         url: "https://berkayalay53.github.io/gecmistekisessizlik.github.io/"
       },
@@ -436,7 +436,7 @@
         url: "https://berkayalay53.github.io/turuncusaclikiz.github.io/"
       },
       { 
-        text: "Kitap biter. Ama ses… devam eder.", 
+        text: "Bazı eller, bir daha dokunulmamak üzere geçer buradan; ama bıraktıkları tenle değil, zamanla silinir.", 
         book: "Kaybolan Sesin Defteri",
         url: "https://berkayalay53.github.io/kaybolansesindefteri.github.io/"
       },
@@ -456,7 +456,7 @@
         url: "https://berkayalay53.github.io/turuncusaclikiz.github.io/"
       },
       { 
-        text: "Sanki konuşmaktan çok… anlatılmayan şeyleri dinliyorduk.", 
+        text: "Bazı hayatlar yazılmaz... Ama susarsa da, içinden geçeni fısıldar. Bazı insanlar, konuşmadan anlatanlardandır...", 
         book: "Bir Defterin İçinde Kalanlar",
         url: "https://berkayalay53.github.io/birdefterinicindekalanlar.github.io/"
       }
