--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
 </head>
 <body>
+<div class="bg-silhouette"></div>
   <div class="cursor-dot" data-cursor-dot></div>
   <div class="cursor-outline" data-cursor-outline></div>
   <div class="grain" aria-hidden="true"></div>
