--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 
 </head>
 <body>
+</head>
+<body>
+
 <div class="bg-silhouette"></div>
   <div class="cursor-dot" data-cursor-dot></div>
   <div class="cursor-outline" data-cursor-outline></div>
