--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
     }
   </style>
 
+
 </head>
-<body>
-</head>
-<body>
+<body<body class="loaded"> <div class="bg-silhouette"></div>
 
 <div class="bg-silhouette"></div>
   <div class="cursor-dot" data-cursor-dot></div>
