--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 
 </head>
-<body<body class="loaded"> <div class="bg-silhouette"></div>
+<body class="loaded">
+  <div class="bg-silhouette"></div>
 
 <div class="bg-silhouette"></div>
   <div class="cursor-dot" data-cursor-dot></div>
