--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     }
   </style>
 
-
 </head>
-<body class="loaded">
-  <div class="bg-silhouette"></div>
+<body>
+</head>
+<body>
 
 <div class="bg-silhouette"></div>
   <div class="cursor-dot" data-cursor-dot></div>
